# app

./: .gitignore  .gitmodules
pyapp/: .gitignore  Taskfile.yml  appdeps.toml  iframe.html  pyproject.toml
pyapp/notebooks/: appdeps.env  appdeps.toml  config.ipynb  config.json  data.ipynb  litellm.ipynb  obeserve.ipynb  serve_intg.ipynb
pyapp/notebooks/data_test/: appdeps.env  appdeps.toml
pyapp/src/pyapp/: config.py  main.py  task.py
pyapp/src/pyapp/cli/: __init__.py  add_ml.py  data.py  groups.py  main.py  schemas.py  utils.py
pyapp/src/pyapp/log/logs/: error.logs
pyapp/src/pyapp/model_connection/: model.py
pyapp/src/pyapp/model_connection/embeddings/langchain/: embeddings.py  fastembed.py
pyapp/src/pyapp/model_connection/lm/langchain/: litellm.py
pyapp/src/pyapp/observation/: Taskfile.yml  instance.py  phoneix.py
pyapp/src/pyapp/protocol/stream/langchain_vercel/: stream.py
pyapp/src/pyapp/serve_integration/: __init__.py  llamacpp.py  mlflow_embedding.py  mlflow_llamacpp.py  utils.py
pyapp/src/pyapp/utils/: config.py  gitignore.py
pyapp/src/pyapp/vectordb/: __init__.py  data.py  vectordb.py
pyapp/tasks/local/: Taskfile.yml
pyapp/tasks/remote/: Taskfile.yml
pyapp/tests/: test_main.py
